Contact Form Added

--- a/src/components/LoginSignUp/LoginSignup.css
+++ b/src/components/LoginSignUp/LoginSignup.css
@@ -47,8 +47,9 @@
     border-radius: 6px;
 }
 
-.input-img-login{
+.input-login img{
     margin: 0px 30px;
+    width: 30px;
 }
 
 .input-login input{
