--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,19 @@
+/* Basic Reset */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-
-BODY {
-  background: #ebf0f1;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Varela Round', sans-serif;
-  height: 100%;
-}
-
-canvas {
-  height: 100vh;
-  z-index: -10;
-  position: fixed;
-  top: 0px;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 a {
   color: #bbbbc4;
   text-decoration: none;
-  -o-transition: .5s;
-  -ms-transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s;
-  transition: .5s;
+  transition: color 0.5s;
 }
 
 a:hover {
@@ -43,7 +22,7 @@ a:hover {
 
 h1 {
   color: #fc3565;
-  padding-bottom: 0px;
+  padding-bottom: 0;
   margin-bottom: 1%;
 }
 
@@ -51,8 +30,8 @@ h2 {
   color: #555560;
   font-size: 3rem;
   font-weight: bold;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 .logo {
@@ -65,7 +44,9 @@ h2 {
   padding-bottom: 5rem;
 }
 
-.pulled {}
+.pulled {
+  /* Styles specific to .pulled class */
+}
 
 .pulled ul li {
   list-style: none;
@@ -78,70 +59,118 @@ h2 {
   font-size: 3rem;
 }
 
-.pulled ul li span{
-  font-size:1.2rem;
+.pulled ul li span {
+  font-size: 1.2rem;
 }
 
-.footer{
-padding-top:5rem;
+.footer {
+  padding-top: 5rem;
 }
 
-.footer p{
-  color:white;
-  font-size:1.2rem;
+.footer p {
+  color: white;
+  font-size: 1.2rem;
 }
 
-.visit{
-  color:white;
-  font-size:12px;
-  background:#32333a;;
-  width:146px;
-  padding:6px;
-  border-radius:10px;
-  position:fixed;
-  right:20px;
+.visit {
+  color: white;
+  font-size: 12px;
+  background: #32333a;
+  width: 146px;
+  padding: 6px;
+  border-radius: 10px;
+  position: fixed;
+  right: 20px;
 }
 
 span.new {
-    background-color: #fc3565;
-    font-weight: 700;
-    padding: .2rem;
-    margin-left: .4rem;
-    color: #fff;
+  background-color: #fc3565;
+  font-weight: 700;
+  padding: 0.2rem;
+  margin-left: 0.4rem;
+  color: #fff;
 }
 
+/* Navbar */
 .navbar {
   background-color: #001660;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.navbar .navbar-brand img {
+  width: 80px;
+}
 
+.navbar-nav {
+  margin-left: auto;
+}
 
+.navbar-nav .nav-item {
+  margin-left: 20px;
+}
+
+.navbar-nav .nav-link {
+  color: #fff;
+  font-weight: 500;
+  padding: 12px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link.active {
+  background-color: #004080;
+  color: #f0f0f0;
+}
+
+.navbar-nav .dropdown-menu {
+  background-color: #001660;
+  border: none;
+}
+
+.navbar-nav .dropdown-item {
+  color: #fff;
+  padding: 10px 20px;
+}
+
+.navbar-nav .dropdown-item:hover {
+  background-color: #004080;
+  color: #f0f0f0;
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler-icon {
+  background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"%3E%3Cpath stroke="rgba(255,255,255,0.5)" stroke-width="2" d="M3 6h24M3 12h24M3 18h24M3 24h24"/%3E%3C/svg%3E');
+}
+
+/* Ensure there's enough padding at the top of the page content to prevent overlap with the fixed navbar */
+body {
+  padding-top: 70px; /* Adjust based on the height of your navbar */
+}
 
 /* Mobile first queries */
 
-
 /* Larger than mobile */
-
 @media (min-width: 400px) {}
 
-
 /* Larger than phablet */
-
 @media (min-width: 550px) {}
 
-
 /* Larger than tablet */
-
 @media (min-width: 750px) {}
 
-
 /* Larger than desktop */
-
 @media (min-width: 1000px) {}
 
-
 /* Larger than Desktop HD */
-
 @media (min-width: 1200px) {
   h1 {
     font-size: 4rem;
